--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 :root {
   --background: #272727;
+  --btn-bg: #444444;
   --text: #747474;
   --cream: #eee;
-  --accent1: #ff652f;
-  --accent2: #14a76c;
-  --accent3: #ffe400;
+  --red: #9a353d;
+  --green: #109868;
+  --blue: #61afef;
+  --radius: 0.2rem;
 }
 * {
   box-sizing: border-box;
@@ -12,73 +14,89 @@
   padding: 0;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 50px;
-  min-height: 100vh;
-  background-color: var(--background);
-}
-
-body,
-textarea {
-  font-size: 1.2em;
-  /* font-weight: bold; */
-  /* font-family: 'Courier New', Courier, monospace; */
+body{
+  padding: 0 2rem;
+  font-size: 1rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 700px;
-  max-width: 90%;
-  border-radius: 0.4rem;
-  background-color: var(--accent1);
-  /* box-shadow: 0.1em 0.1em 0.1em 0.2em var(--accent1); */
-  padding: 0.5rem;
-}
-
-.text-display {
-  background: var(--foreground);
-  color: var(--cream);
-  margin-bottom: 1.5em;
-  margin-left: 0.5em;
-}
-
-textarea {
-  background: transparent;
   color: var(--text);
-  border: 4px solid lightpink;
-  padding: 0.2em;
-  width: 100%;
-  height: 8em;
-  resize: none;
-  outline: none;
-  border-radius: 0.4rem;
+  background-color: var(--background);
+  min-height: 100vh;
 }
 
-textarea:focus {
-  border: 4px solid crimson;
+ul{
+  list-style-type: none;
+}
+
+/* TOP */
+/* Navbar  */
+.top{
+  margin-bottom: 4rem;
+  height: 50px;
+}
+.nav-list{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: var(--radius);
+}
+
+.nav-item{
+  list-style: none;
+  text-decoration: none;
+  margin-right: 2rem;
+  color: var(--text);
+}
+
+.nav-item a{
+  text-decoration: none;
+  color: var(--text);
+}
+
+.nav-item:first-child{
+  margin-right: auto;
+}
+
+.kiwi-logo{
+  margin-right: 1rem;
+  font-size: 1.4rem;
+}
+
+.kiwi-word{
+  color: var(--green);
+}
+
+.kiwitype{
+  font-size: 1.4rem;
+}
+
+/* MIDDLE */
+.middle {
+  margin-bottom: 4rem;
 }
 
 .timer {
-  font-weight: bold;
-  font-size: 4em;
-  /* top: 0.5em; */
-  /* color: var(--text); */
-  color: var(--accent1);
+  font-size: 1.8rem;
+  color: var(--red);
 }
 
 /* CORRECT / INCORRECT */
 .correct {
-  color: blue;
+  color: var(--blue);
 }
 
 .incorrect {
-  color: crimson;
+  color: var(--red);
   text-decoration: underline;
+}
+
+.text{
+  font-size: 1.5rem;
+}
+
+/* BOTTOM */
+.bottom{
+  /* height: 100px; */
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 2rem;
 }
