--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,20 @@ ul{
 }
 
 .kiwitype{
-  font-size: 1.4rem;
+  font-size: 1.6rem;
+}
+
+/* Timers */
+.timers span{
+  margin-right: 0.6rem;
+  font-size: 0.8rem;
+}
+
+.timer-selection{
+  background-color: var(--red);
+  color: var(--cream);
+  border-radius: var(--radius);
+  padding: 0.1rem;
 }
 
 /* MIDDLE */
@@ -79,14 +92,18 @@ ul{
   color: var(--red);
 }
 
-/* CORRECT / INCORRECT */
+/* CORRECT / INCORRECT / CURSOR */
+.cursor{
+  background-color: var(--cream);
+  border-radius: var(--radius);
+}
+
 .correct {
   color: var(--blue);
 }
 
 .incorrect {
   color: var(--red);
-  text-decoration: underline;
 }
 
 .text{
@@ -94,9 +111,17 @@ ul{
 }
 
 /* BOTTOM */
-.bottom{
+.footer{
   /* height: 100px; */
   position: fixed;
   bottom: 0;
   margin-bottom: 2rem;
+  padding-right: 6rem;
+  width: 100%;
+}
+
+.footer-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
